# tracemate

./: .gitignore  Dockerfile  Dockerfile-base  Dockerfile-dev  Makefile.in  NOTICE  README.md  configure.ac
buildtools/: docker.sh  mkversion.sh
buildtools/el7/: el7-Circonus.repo
charts/tracemate/: Chart.yaml  install.sh  uninstall.sh
charts/tracemate/configs/: tm.tpl
charts/tracemate/templates/: _helpers.tpl  config.yaml  deployment.yaml  pvc.yaml  service.yaml
scripts/: backwash  tracemate.sh
src/: Makefile.dep  Makefile.in  main.c  tm.conf.in  tm_circonus.c  tm_circonus.h  tm_config.h.in  tm_hooks.c  tm_hooks.h  tm_jaeger.cpp  tm_jaeger.h  tm_kafka.c  tm_kafka.h  tm_log.h  tm_metric.c  tm_metric.h  tm_process.c  tm_process.h  tm_process_aggregate.c  tm_process_aggregate.h  tm_process_elastic_span.c  tm_process_error.c  tm_process_metric.c  tm_process_metric.h  tm_process_otel_span.cc  tm_process_otel_span.h  tm_process_regex.c  tm_process_span.c  tm_process_transaction.c  tm_process_transaction.h  tm_process_url.c  tm_transaction_store.c  tm_transaction_store.h  tm_url_squasher.c  tm_url_squasher.h  tm_utils.c  tm_utils.h  tm_version.h  tm_visuals.c  tm_visuals.h
src/bloom/: Makefile.in  bloom.cpp  bloom.h  bloom.hpp
src/modules/: Makefile.in  README.md
src/proto/: Makefile.in  README.md  collector.proto  jaeger.proto  pubsub.proto  trace.proto  tracing.proto
src/tm-web/: index.html
src/tm-web/css/: theme.css
src/tm-web/js/: tm.js
terraform/: README.md
terraform/example/: services.tf  variables.tf
terraform/module/: README.md  alert_checks.tf  cpu_graph.tf  error_rate_graph.tf  errors_slo_graph.tf  jvm_heap_graph.tf  latency_slo_graph.tf  locals.tf  main.tf  memory_rulesets.tf  nodejs_heap_graph.tf  outputs.tf  overlay_set.tf  response_time_graph.tf  response_time_histogram_graph.tf  service_dashboard.tf  throughput_graph.tf  top_five_graph.tf  url_error_rate_graph.tf  url_response_time_graph.tf  url_response_time_histogram_graph.tf  url_throughput_graph.tf  url_worksheet.tf  variables.tf
visuals/: average_response_time_graph.json  average_response_time_graph_message.json  cpu_graph.json  dashboard_with_slo.json  error_rate_graph.json  error_rate_graph_message.json  golang_memory_graph.json  heatmap_response_time.json  heatmap_response_time_message.json  jvm_memory_graph.json  latency_error_budget.json  nodejs_memory_graph.json  python_memory_graph.json  response_error_budget.json  throughput_graph.json  throughput_graph_message.json  topn_graph.json
